--- a/css/style.css
+++ b/css/style.css
@@ -203,6 +203,11 @@
     font-size: 62.5%;
     -webkit-text-size-adjust: none;
   }
+  @media screen and (width < 900px) {
+    html {
+      font-size: 31.25%;
+    }
+  }
   body {
     font-size: 1rem;
   }
