--- a/css/style.css
+++ b/css/style.css
@@ -252,6 +252,9 @@
       top: 50%;
       transform: translate(-50%, -50%);
     }
+    .logo img {
+      width: 10.9rem;
+    }
   }
 }
 @layer Header.Gnb {
