Add component - table

--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,7 @@
   --orange: #f69740;
   --yellow: #fac300;
   --white: #ffffff;
+  --graye1: #e1e1e1;
   --gray33: #333333;
   --gray5c: #5c5c5c;
   --gray66: #666666;
@@ -396,6 +397,7 @@
     text-align: center;
   }
   .heading.small {
+    margin-top: 0.7rem;
     color: var(--gray5c);
     font-size: 3.6rem;
     font-weight: 300;
@@ -411,8 +413,11 @@
     background-color: var(--yellow);
   }
   @media screen and (width < 900px) {
-    .heading.small::after {
+    .heading.small {
       margin: 2.4rem auto 0;
+    }
+    .heading.small::after {
+      margin-top: 2.4rem auto 0;
     }
   }
 }
@@ -425,10 +430,13 @@
     display: flex;
     align-items: center;
     height: 32rem;
+    box-sizing: border-box;
   }
   @media screen and (width < 900px) {
     .visual .m0auto {
       flex-direction: column;
+      height: 25.5rem;
+      padding-top: 7.7rem;
     }
   }
   .visual__title {
@@ -445,11 +453,17 @@
     }
   }
   .visual__subtitle {
+    display: none;
     color: var(--white);
     font-size: 2.4rem;
     font-weight: 500;
     letter-spacing: -0.12rem;
     text-align: center;
+  }
+  @media screen and (width < 900px) {
+    .visual__subtitle {
+      display: block;
+    }
   }
   .visual__img {
     position: absolute;
@@ -469,6 +483,43 @@
   }
   .visual__img.bg3::after {
     content: url(../images/img_visual3.png);
+  }
+}
+@layer Table {
+  .table.type1 tr {
+    height: 8.4rem;
+    border-bottom: 0.1rem solid var(--graye1);
+  }
+  .table.type1 th {
+    width: 20.9rem;
+    padding: 3rem;
+    font-size: 1.6rem;
+    font-weight: 500;
+    line-height: 2.3rem;
+    text-align: left;
+    color: var(--gray33);
+  }
+  .table.type1 td {
+    padding: 3rem 3rem 3rem 0;
+    font-weight: 400;
+    font-size: 1.6rem;
+    line-height: 2.317rem;
+    color: var(--gray66);
+  }
+  @media screen and (width < 900px) {
+    .table.type1 th {
+      display: block;
+      width: auto;
+      padding: 3rem 0 0;
+      font-size: 2.6rem;
+      font-weight: 700;
+    }
+    .table.type1 td {
+      display: block;
+      padding: 1rem 0 3rem;
+      font-size: 2.6rem;
+      line-height: 4.68rem;
+    }
   }
 }
 @layer Base {
